@@ -77,7 +77,7 @@ setup(name='zope.app.form',
           "zope.interface",
           "zope.proxy",
           "zope.publisher",
-          "zope.schema",
+          "zope.schema>=3.5a1",
           "zope.security",
           "zope.app.basicskin",
           "zope.location",
